Fix asset paths

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,8 @@
   <title>Veldra Demo</title>
   <meta name="description" content="Run Veldra locally on regtest. See accepts, rejects, fee tiers, and reason codes on the operator dashboard.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js" defer></script>
 </head>
 <body>
   <div class="bgGrid"></div>
