--- a/how-it-works.html
+++ b/how-it-works.html
@@ -6,7 +6,8 @@
   <title>How Veldra Works</title>
   <meta name="description" content="Veldra data flow: template source to template manager to pool verifier to reason coded verdicts and operator dashboard.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js" defer></script>
 </head>
 <body>
   <div class="bgGrid"></div>
