--- a/policy.html
+++ b/policy.html
@@ -6,7 +6,8 @@
   <title>Veldra Policy</title>
   <meta name="description" content="Reason codes, policy.toml examples, and what a traceable reject contains.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js" defer></script>
 </head>
 <body>
   <div class="bgGrid"></div>
