--- a/security.html
+++ b/security.html
@@ -6,7 +6,8 @@
   <title>Veldra Security</title>
   <meta name="description" content="Scope, limitations, and safety warnings for running Veldra.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js" defer></script>
 </head>
 <body>
   <div class="bgGrid"></div>
