--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <title>About Veldra</title>
   <meta name="description" content="Veldra is a policy based template verifier and ops dashboard for Bitcoin mining pools.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/script.js" defer></script>
 </head>
 <body>
   <div class="bgGrid"></div>
