Replace filler with real content and fix asset paths

--- a/about.html
+++ b/about.html
@@ -56,13 +56,10 @@
 
         <div class="card">
           <h3>Contact</h3>
-          <p>Use a real inbox here once you set it up.</p>
           <div class="hr"></div>
           <div class="code">
-            <pre class="mono">contact@veldra.org</pre>
+            <pre class="mono">jarrondeng@veldra.org</pre>
           </div>
-          <div class="hr"></div>
-          <div class="callout">Replace the email above with whatever you actually control.</div>
         </div>
 
         <div class="card full">
