--- a/demo.html
+++ b/demo.html
@@ -74,11 +74,17 @@ cp .env.example .env
 
         <div class="card full">
           <h3>Demo media</h3>
-          <p>Drop a short clip or GIF into <span class="mono">assets/demo.mp4</span> or <span class="mono">assets/demo.gif</span>, then update this section.</p>
+          <p>Regtest run showing multiple fee tiers and multiple reject reasons in the dashboard.</p>
           <div class="hr"></div>
-          <div class="callout">
-            Recommended: record 30 to 60 seconds showing the dashboard flipping between ACCEPT and REJECT while reason codes and fee tiers change.
-          </div>
+            <div class="video">
+                <iframe
+                src="https://youtu.be/lDIIl7Oe73Y"
+                title="Veldra demo"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+                </iframe>
+            </div>
         </div>
       </div>
     </section>
