--- a/about.html
+++ b/about.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <title>About Veldra</title>
   <meta name="description" content="Veldra is a policy based template verifier and ops dashboard for Bitcoin mining pools.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="assets/style.css">
-  <script src="assets/script.js" defer></script>
+  <link rel="canonical" href="https://veldra.org/about.html">
+
+  <!-- Favicons (absolute paths + cache buster) -->
+  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=4">
+  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=4">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="About Veldra">
+  <meta property="og:description" content="Policy based template verification and operator observability for Bitcoin mining pools. Deterministic verdicts with traceable rejects and reason codes.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://veldra.org/about.html">
+  <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="/assets/style.css">
+  <script src="/assets/script.js" defer></script>
 </head>
+
 <body>
   <div class="bgGrid"></div>
   <div class="noise"></div>
@@ -16,17 +34,23 @@
   <header>
     <div class="container">
       <div class="nav">
-        <div class="brand">
-          <div class="mark" aria-hidden="true"></div>
-          <div>Veldra</div>
-        </div>
+        <!-- Brand: real logo image -->
+        <a class="brand" href="/index.html" aria-label="Veldra home">
+          <img
+            src="/assets/brand/veldra-logo.png"
+            alt="Veldra"
+            height="28"
+            style="display:block"
+          >
+        </a>
+
         <nav class="navlinks">
-          <a class="pill" href="index.html">Home</a>
-          <a class="pill" href="demo.html">Demo</a>
-          <a class="pill" href="how-it-works.html">How it works</a>
-          <a class="pill" href="policy.html">Policy</a>
-          <a class="pill" href="security.html">Security</a>
-          <a class="pill" aria-current="page" href="about.html">About</a>
+          <a class="pill" href="/index.html">Home</a>
+          <a class="pill" href="/demo.html">Demo</a>
+          <a class="pill" href="/how-it-works.html">How it works</a>
+          <a class="pill" href="/policy.html">Policy</a>
+          <a class="pill" href="/security.html">Security</a>
+          <a class="pill" aria-current="page" href="/about.html">About</a>
         </nav>
       </div>
     </div>
@@ -37,7 +61,8 @@
       <div class="kicker"><span class="dot"></span> about</div>
       <h1>Veldra</h1>
       <p class="sub">
-        Veldra is a policy based template verifier and operator dashboard for Bitcoin mining pools. The goal is simple: make every reject explain itself through stable reason codes plus policy context.
+        Veldra is a policy based template verifier and operator dashboard for Bitcoin mining pools.
+        The goal is simple: make every reject explain itself through stable reason codes plus policy context.
       </p>
     </section>
 
@@ -49,8 +74,8 @@
           <div class="hr"></div>
           <div style="display:flex; gap:12px; flex-wrap:wrap">
             <a class="btn" href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">Code</a>
-            <a class="btn" href="demo.html">Demo</a>
-            <a class="btn" href="policy.html">Policy</a>
+            <a class="btn" href="/demo.html">Demo</a>
+            <a class="btn" href="/policy.html">Policy</a>
           </div>
         </div>
 
@@ -72,11 +97,9 @@
     <footer class="footer">
       <div class="footerRow">
         <div>© 2026 Veldra</div>
-        <div><a href="security.html">Security boundaries</a></div>
+        <div><a href="/security.html">Security boundaries</a></div>
       </div>
     </footer>
   </main>
-
-  <script src="script.js"></script>
 </body>
 </html>
