--- a/demo.html
+++ b/demo.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <title>Veldra Demo</title>
   <meta name="description" content="Run Veldra locally on regtest. See accepts, rejects, fee tiers, and reason codes on the operator dashboard.">
   <meta name="theme-color" content="#070b12">
-  <link rel="stylesheet" href="assets/style.css">
-  <script src="assets/script.js" defer></script>
+  <link rel="canonical" href="https://veldra.org/demo.html">
+
+  <!-- Favicons (absolute paths + cache buster) -->
+  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=4">
+  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=4">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Veldra Demo">
+  <meta property="og:description" content="Run Veldra locally on regtest. See accepts, rejects, fee tiers, and reason codes on the operator dashboard.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://veldra.org/demo.html">
+  <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="/assets/style.css">
+  <script src="/assets/script.js" defer></script>
 </head>
+
 <body>
   <div class="bgGrid"></div>
   <div class="noise"></div>
@@ -16,17 +34,23 @@
   <header>
     <div class="container">
       <div class="nav">
-        <div class="brand">
-          <div class="mark" aria-hidden="true"></div>
-          <div>Veldra</div>
-        </div>
+        <!-- Brand: real logo image -->
+        <a class="brand" href="/index.html" aria-label="Veldra home">
+          <img
+            src="/assets/brand/veldra-logo.png"
+            alt="Veldra"
+            height="28"
+            style="display:block"
+          >
+        </a>
+
         <nav class="navlinks">
-          <a class="pill" href="index.html">Home</a>
-          <a class="pill" aria-current="page" href="demo.html">Demo</a>
-          <a class="pill" href="how-it-works.html">How it works</a>
-          <a class="pill" href="policy.html">Policy</a>
-          <a class="pill" href="security.html">Security</a>
-          <a class="pill" href="about.html">About</a>
+          <a class="pill" href="/index.html">Home</a>
+          <a class="pill" aria-current="page" href="/demo.html">Demo</a>
+          <a class="pill" href="/how-it-works.html">How it works</a>
+          <a class="pill" href="/policy.html">Policy</a>
+          <a class="pill" href="/security.html">Security</a>
+          <a class="pill" href="/about.html">About</a>
         </nav>
       </div>
     </div>
@@ -76,15 +100,22 @@ cp .env.example .env
           <h3>Demo media</h3>
           <p>Regtest run showing multiple fee tiers and multiple reject reasons in the dashboard.</p>
           <div class="hr"></div>
-            <div class="video">
-                <iframe
-                src="https://youtu.be/lDIIl7Oe73Y"
-                title="Veldra demo"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-                </iframe>
-            </div>
+
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/lDIIl7Oe73Y"
+              title="Veldra demo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+
+          <div class="hr"></div>
+          <div style="display:flex; gap:12px; flex-wrap:wrap">
+            <a class="btn" href="https://youtu.be/lDIIl7Oe73Y" target="_blank" rel="noreferrer">Open on YouTube</a>
+            <a class="btn" href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">View repo</a>
+          </div>
         </div>
       </div>
     </section>
@@ -118,7 +149,5 @@ cp .env.example .env
       </div>
     </footer>
   </main>
-
-  <script src="script.js"></script>
 </body>
 </html>
