Redesign v1 + cache bust

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="assets/style.css">
-  <script src="assets/script.js" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=20260107-1">
+  <script src="/assets/script.js?v=20260107-1" defer></script>
 </head>
 
 <body>
