--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
   <div class="topbar">
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/index.html" aria-label="Veldra home">
+        <a class="brand" href="/" aria-label="Veldra home">
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
 
         <div class="navlinks">
-          <a aria-current="page" href="/index.html">Home</a>
-          <a href="/demo.html">Demo</a>
-          <a href="/how-it-works.html">How it works</a>
-          <a href="/policy.html">Policy</a>
-          <a href="/security.html">Security</a>
-          <a href="/about.html">About</a>
+          <a aria-current="page" href="/">Home</a>
+          <a href="/demo/">Demo</a>
+          <a href="/how-it-works/">How it works</a>
+          <a href="/policy/">Policy</a>
+          <a href="/security/">Security</a>
+          <a href="/about/">About</a>
         </div>
 
         <div class="navcta">
-          <a class="btn primary" href="/demo.html">View demo</a>
+          <a class="btn primary" href="/demo/">View demo</a>
         </div>
       </div>
     </div>
@@ -55,9 +55,9 @@
       </p>
 
       <div class="herorow">
-        <a class="btn primary" href="/demo.html">Watch the demo</a>
+        <a class="btn primary" href="/demo/">Watch the demo</a>
         <a class="btn" href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn accent" href="/policy.html">Reason codes</a>
+        <a class="btn accent" href="/policy/">Reason codes</a>
       </div>
 
       <div class="badges">
