--- a/demo/index.html
+++ b/demo/index.html
@@ -23,11 +23,11 @@
 
         <div class="navlinks">
           <a href="/index.html">Home</a>
-          <a aria-current="page" href="/demo.html">Demo</a>
-          <a href="/how-it-works.html">How it works</a>
-          <a href="/policy.html">Policy</a>
-          <a href="/security.html">Security</a>
-          <a href="/about.html">About</a>
+          <a aria-current="page" href="/demo/index.html">Demo</a>
+          <a href="/how-it-works/index.html">How it works</a>
+          <a href="/policy/index.html">Policy</a>
+          <a href="/security/index.html">Security</a>
+          <a href="/about/index.html">About</a>
         </div>
 
         <div class="navcta">
