Clean URLs (folder index.html routing)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=2">
-  <script src="/assets/script.js?v=2" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=3">
+  <script src="/assets/script.js?v=3" defer></script>
 </head>
 
 <body>
@@ -126,7 +126,7 @@
       <div class="grid">
         <div class="card full">
           <div class="codepanel">
-            <button class="copybtn" data-copy="verdict" onclick="copyTextFrom('verdict')">Copy</button>
+            <button class="copybtn" onclick="copyTextFrom('verdict')">Copy</button>
 <pre id="verdict">{
   "template_id": "regtest-000000000000000000",
   "verdict": "REJECT",
