Clean URLs (folder index.html routing)

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,25 +9,25 @@
 
   <link rel="icon" type="image/png" href="/assets/brand/favicon.png">
   <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png">
-  <link rel="stylesheet" href="/assets/style.css?v=2">
-  <script src="/assets/script.js?v=2" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=3">
+  <script src="/assets/script.js?v=3" defer></script>
 </head>
 
 <body>
   <div class="topbar">
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/index.html" aria-label="Veldra home">
+        <a class="brand" href="/" aria-label="Veldra home">
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
 
         <div class="navlinks">
-          <a href="/index.html">Home</a>
-          <a aria-current="page" href="/demo.html">Demo</a>
-          <a href="/how-it-works.html">How it works</a>
-          <a href="/policy.html">Policy</a>
-          <a href="/security.html">Security</a>
-          <a href="/about.html">About</a>
+          <a href="/">Home</a>
+          <a aria-current="page" href="/demo/">Demo</a>
+          <a href="/how-it-works/">How it works</a>
+          <a href="/policy/">Policy</a>
+          <a href="/security/">Security</a>
+          <a href="/about/">About</a>
         </div>
 
         <div class="navcta">
@@ -63,7 +63,7 @@
           <p>Start regtest, template manager, and verifier.</p>
           <div class="hr"></div>
           <div class="codepanel">
-            <button class="copybtn" data-copy="qs" onclick="copyTextFrom('qs')">Copy</button>
+            <button class="copybtn" onclick="copyTextFrom('qs')">Copy</button>
 <pre id="qs">git clone https://github.com/LeavesJ/veldra.git
 cd veldra
 cp .env.example .env
@@ -76,7 +76,7 @@ cp .env.example .env
           <p>Verifier dashboard.</p>
           <div class="hr"></div>
           <div class="codepanel">
-            <button class="copybtn" data-copy="open" onclick="copyTextFrom('open')">Copy</button>
+            <button class="copybtn" onclick="copyTextFrom('open')">Copy</button>
 <pre id="open">http://127.0.0.1:8080</pre>
           </div>
           <div class="hr"></div>
@@ -87,7 +87,7 @@ cp .env.example .env
 
     <div class="footer">
       <div>© 2026 Veldra</div>
-      <div><a href="/security.html">Security boundaries</a></div>
+      <div><a href="/security/">Security boundaries</a></div>
     </div>
   </main>
 </body>
