--- a/about/index.html
+++ b/about/index.html
@@ -9,25 +9,25 @@
 
   <link rel="icon" type="image/png" href="/assets/brand/favicon.png">
   <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png">
-  <link rel="stylesheet" href="/assets/style.css?v=2">
-  <script src="/assets/script.js?v=2" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=3">
+  <script src="/assets/script.js?v=3" defer></script>
 </head>
 
 <body>
   <div class="topbar">
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/index.html" aria-label="Veldra home">
+        <a class="brand" href="/" aria-label="Veldra home">
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
 
         <div class="navlinks">
-          <a href="/index.html">Home</a>
-          <a href="/demo.html">Demo</a>
-          <a href="/how-it-works.html">How it works</a>
-          <a href="/policy.html">Policy</a>
-          <a href="/security.html">Security</a>
-          <a aria-current="page" href="/about.html">About</a>
+          <a href="/">Home</a>
+          <a href="/demo/">Demo</a>
+          <a href="/how-it-works/">How it works</a>
+          <a href="/policy/">Policy</a>
+          <a href="/security/">Security</a>
+          <a aria-current="page" href="/about/">About</a>
         </div>
 
         <div class="navcta">
@@ -80,8 +80,8 @@
           <div class="hr"></div>
           <div style="display:flex; gap:12px; flex-wrap:wrap">
             <a class="btn" href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">View code</a>
-            <a class="btn" href="/demo.html">Demo</a>
-            <a class="btn" href="/security.html">Security boundaries</a>
+            <a class="btn" href="/demo/">Demo</a>
+            <a class="btn" href="/security/">Security boundaries</a>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
 
     <div class="footer">
       <div>© 2026 Veldra</div>
-      <div><a href="/policy.html">Reason codes</a></div>
+      <div><a href="/policy/">Reason codes</a></div>
     </div>
   </main>
 </body>
