--- a/security/index.html
+++ b/security/index.html
@@ -9,29 +9,29 @@
 
   <link rel="icon" type="image/png" href="/assets/brand/favicon.png">
   <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png">
-  <link rel="stylesheet" href="/assets/style.css?v=2">
-  <script src="/assets/script.js?v=2" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=3">
+  <script src="/assets/script.js?v=3" defer></script>
 </head>
 
 <body>
   <div class="topbar">
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/index.html" aria-label="Veldra home">
+        <a class="brand" href="/" aria-label="Veldra home">
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
 
         <div class="navlinks">
-          <a href="/index.html">Home</a>
-          <a href="/demo.html">Demo</a>
-          <a href="/how-it-works.html">How it works</a>
-          <a href="/policy.html">Policy</a>
-          <a aria-current="page" href="/security.html">Security</a>
-          <a href="/about.html">About</a>
+          <a href="/">Home</a>
+          <a href="/demo/">Demo</a>
+          <a href="/how-it-works/">How it works</a>
+          <a href="/policy/">Policy</a>
+          <a aria-current="page" href="/security/">Security</a>
+          <a href="/about/">About</a>
         </div>
 
         <div class="navcta">
-          <a class="btn primary" href="/demo.html">View demo</a>
+          <a class="btn primary" href="/demo/">View demo</a>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
 
     <div class="footer">
       <div>© 2026 Veldra</div>
-      <div><a href="/about.html">Contact</a></div>
+      <div><a href="/about/">Contact</a></div>
     </div>
   </main>
 </body>
