ReserveGrid OS update

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <main class="container">
     <section class="hero">
-      <div class="kicker"><span class="kdot"></span> Operator-grade template verification</div>
+      <div class="kicker"><span class="kdot"></span> ReserveGrid OS: Operator-grade template verification</div>
       <h1>Policy enforcement for mining pool block templates</h1>
       <p class="lede">
         Veldra evaluates templates against operator policy and returns deterministic ACCEPT or REJECT with reason codes and measured context.
