clarify veldra and reservegrid os

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
       <div class="kicker"><span class="kdot"></span> About</div>
       <h1>Veldra</h1>
       <p class="lede">
-        Veldra is a policy-based template verifier and operator dashboard for Bitcoin mining pools.
+        Veldra's ReserveGrid OS is a policy-based template verifier and operator dashboard for Bitcoin mining pools.
         The goal: every reject explains itself.
       </p>
     </section>
