--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -42,7 +42,7 @@
       <div class="kicker"><span class="kdot"></span> System</div>
       <h1>Templates in, verdicts out</h1>
       <p class="lede">
-        Veldra takes a candidate template, evaluates it against policy, and returns a verdict object that is safe to log and display.
+        ReserveGrid OS takes a candidate template, evaluates it against policy, and returns a verdict object that is safe to log and display.
       </p>
 
       <div class="badges">
