--- a/policy/index.html
+++ b/policy/index.html
@@ -42,7 +42,7 @@
       <div class="kicker"><span class="kdot"></span> Policy</div>
       <h1>Reason codes and context</h1>
       <p class="lede">
-        A reject is credible only when it names the failure and shows the numbers. Veldra emits stable codes plus policy context.
+        A reject is credible only when it names the failure and shows the numbers. ReserveGrid OS emits stable codes plus policy context.
       </p>
     </section>
 
