--- a/security/index.html
+++ b/security/index.html
@@ -42,7 +42,7 @@
       <div class="kicker"><span class="kdot"></span> Security</div>
       <h1>Boundaries and safe defaults</h1>
       <p class="lede">
-        Veldra is infrastructure. Treat the dashboard and APIs as sensitive operational surfaces.
+        Veldra gives infrastructure. Treat the dashboard and APIs as sensitive operational surfaces.
       </p>
     </section>
 
