--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="kicker"><span class="kdot"></span> ReserveGrid OS: Operator-grade template verification</div>
       <h1>Policy enforcement for mining pool block templates</h1>
       <p class="lede">
-        Veldra evaluates templates against operator policy and returns deterministic ACCEPT or REJECT with reason codes and measured context.
+        ReserveGrid OS evaluates templates against operator policy and returns deterministic ACCEPT or REJECT with reason codes and measured context.
       </p>
 
       <div class="herorow">
