updated Veldra copyright

--- a/demo/index.html
+++ b/demo/index.html
@@ -86,7 +86,7 @@ cp .env.example .env
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div><a href="/security/">Security boundaries</a></div>
     </div>
   </main>
