--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div>Next: <a href="/policy/">Policy</a></div>
     </div>
   </main>
