--- a/policy/index.html
+++ b/policy/index.html
@@ -175,7 +175,7 @@ min_avg_fee_sat_vb = 20.0</pre>
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div>Next: <a href="/security/">Security</a></div>
     </div>
   </main>
