--- a/security/index.html
+++ b/security/index.html
@@ -107,7 +107,7 @@
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div><a href="/about/">Contact</a></div>
     </div>
   </main>
