--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div><a href="/policy/">Reason codes</a></div>
     </div>
   </main>
