--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <div class="footer">
-      <div>© 2026 Veldra</div>
+      <div>© 2026 Veldra, Inc.</div>
       <div>Keep operational dashboards private unless you add auth.</div>
     </div>
   </main>
