sample policy.toml edits

--- a/policy/index.html
+++ b/policy/index.html
@@ -120,7 +120,7 @@
         <div class="card full">
           <div class="codepanel">
             <button class="copybtn" onclick="copyTextFrom('policy')">Copy</button>
-<pre id="policy"># Example only. Match your repo schema.
+<pre id="policy"># Example only. 
 
 [policy]
 protocol_version = 1
@@ -133,7 +133,7 @@ min_avg_fee = 0
 low_mempool_tx = 50
 high_mempool_tx = 500
 
-# Required by current PolicyConfig (even if unused by the evaluator today)
+# Required by current PolicyConfig 
 tx_count_mid_threshold = 10
 tx_count_hi_threshold = 50
 
