veldra logo cache busting

--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Project summary, contact, and repository licensing.">
   <meta name="theme-color" content="#0b1b2b">
 
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png">
+  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
+  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
   <link rel="stylesheet" href="/assets/style.css?v=3">
   <script src="/assets/script.js?v=3" defer></script>
 </head>
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="nav">
         <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
+          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
         </a>
 
         <div class="navlinks">
