--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="theme-color" content="#0b1b2b">
 
   <link rel="canonical" href="https://veldra.org/">
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png">
+  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
+  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
 
   <meta property="og:title" content="Veldra">
   <meta property="og:description" content="Policy based template verification for Bitcoin mining pools. Deterministic verdicts with reason codes and policy context.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://veldra.org/">
-  <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
+  <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png?v=20260120">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="/assets/style.css?v=3">
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="nav">
         <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
+          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra" class="brand-logo">
         </a>
 
         <div class="navlinks">
