veldra logo position adjustment

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="nav">
         <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra" class="brand-logo">
+          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
         </a>
 
         <div class="navlinks">
